--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -21,8 +21,11 @@ jobs:
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml -P build-natives-win
+      - name: Build natives
+        run: mvn -B compile --file pom.xml -P build-natives-win
+
+      - name: Package jar
+        run: mvn -B package --file pom.xml
 
       - uses: actions/upload-artifact@v3
         with:
