--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -23,8 +23,9 @@ jobs:
 
       - name: Install gpg key
         run: |
-          cat <(echo -e "${{ secrets.GPG_PRIVATE_KEY }}") | gpg --batch --import
-          echo "${{ secrets.GPG_PASSPHRASE }}" | gpg --passphrase-fd 0 --batch --yes --no-tty --pinentry-mode loopback --import
+          echo "${{ secrets.GPG_KEY }}" > gpg_key.asc
+          echo "${{ secrets.GPG_PASSPHRASE }}" | gpg --passphrase-fd 0 --batch --yes --no-tty --pinentry-mode loopback --import gpg_key.asc
+          del gpg_key.asc
           gpg --list-keys
           gpg --list-secret-keys
 
