--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           $PSVersionTable
           echo "${{ secrets.GPG_KEY }}" > gpg_key.asc
-          gpg --passphrase-fd 0 --batch --yes --no-tty --pinentry-mode loopback --import gpg_key.asc
+          gpg --batch --import gpg_key.asc
           del gpg_key.asc
           gpg --list-keys
           gpg --list-secret-keys
