--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -23,20 +23,15 @@ jobs:
 
       - name: Install gpg key
         run: |
-          $PSVersionTable
           echo "${{ secrets.GPG_PRIVATE_KEY }}" > gpg_key.asc
-          ls -l gpg_key.asc
-          gpg --version
           gpg --batch --import gpg_key.asc
           del gpg_key.asc
-          gpg --list-keys
-          gpg --list-secret-keys
 
       - name: Build natives
         run: mvn -B compile --file pom.xml -P build-natives-win
 
       - name: Package jar
-        run: mvn -B verify --file pom.xml
+        run: mvn -B verify --file pom.xml -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }}
 
       - uses: actions/upload-artifact@v3
         with:
