--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -31,7 +31,7 @@ jobs:
         run: mvn -B compile --file pom.xml -P build-natives-win
 
       - name: Package jar
-        run: mvn -Dgpg.passphrase="${{ secrets.GPG_PASSPHRASE }}" -B verify --file pom.xml
+        run: mvn -B verify --file pom.xml "-Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }}"
 
       - uses: actions/upload-artifact@v3
         with:
