--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -21,7 +21,7 @@ jobs:
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-      - name: Install gpg key
+      - name: Import gpg key
         run: |
           echo "${{ secrets.GPG_PRIVATE_KEY }}" > gpg_key.asc
           gpg --batch --import gpg_key.asc
