--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,7 +30,7 @@ jobs:
           del gpg_key.asc
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml -P build-natives-win
+        run: mvn -B package -P build-natives-win
 
       - name: Publish to Maven Central
-        run: mvn deploy -s ${{ github.workspace }}/settings.xml "-Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }}"
+        run: mvn -B deploy -s ${{ github.workspace }}/settings.xml "-Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }}"
